spacing fix for #387

--- a/static/css/custom-style.css
+++ b/static/css/custom-style.css
@@ -781,19 +781,19 @@ table td {
   }
   h1 {
     font-size: 3em;
-    line-height: 1em;
+    line-height: 1.5em;
   }
   h2 {
     font-size: 2.25em;
-    line-height: 1em;
+    line-height: 1.5em;
   }
   h3 {
     font-size: 1.75em;
-    line-height: 1em;
+    line-height: 1.5em;
   }
   h4 {
     font-size: 1.125em;
-    line-height: 1em;
+    line-height: 1.5em;
   }
   h5 {
     font-size: 1em;
